# Enterprise-Rag

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  query.py  retriever.py
apps/backend/: deps.py  main.py  pyproject.toml
apps/backend/features/auth/: routes.py  service.py
apps/backend/features/google_drive/: google_drive_service.py
apps/backend/features/ingestion/: embed.py  tasks.py
apps/backend/features/query/: chat_routes.py  models.py  rag.py
apps/backend/infrastructure/: config.py  logging_config.py  vector_store_provider.py
apps/backend/infrastructure/databases/: db.py  vector_db.py
apps/backend/scripts/: bootstrap_first_user.py  migrate_add_email_role.py  verify_history.py  worker.py
apps/backend/static/: query.css
apps/backend/templates/: query.html
apps/frontend/: .env.example  .gitignore  package.json
apps/frontend/src/: index.css
apps/frontend/src/api/: axios.ts
apps/frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  SignInPage.tsx  SignUpPage.tsx
database/: db.py
infrastructure/: vector_store_provider.py
infrastructure/databases/: db.py  vector_db.py
ingestion/: embed.py  reader.py
models/: department.py  query_request.py  user.py
repositories/: departments.py  users.py
routes/: auth.py  departments.py  users.py  users_dto.py
scripts/: bootstrap_first_user.py  create_departments_table.py
services/: auth.py  filter_handler.py  query.py
services/google_drive/: google_drive_service.py
services/ingestion/: embed.py  reader.py
static/: query.css
templates/: query.html
(+29 files in other folders)
