[project]
name = "rag-for-small-company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.4",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-fastembed>=0.5.0",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-readers-file>=0.5.6",
    "sentence-transformers>=5.2.3",
]
